# AutoAgents

crates/autoagents/: Cargo.toml
crates/autoagents-llm/: Cargo.toml
crates/autoagents-llm/src/: lib.rs
crates/autoagents-llm/src/backends/: llama_cpp.rs  mod.rs
crates/autoagents-qdrant/src/: lib.rs
docs/rust_copilot/: retrieval_goals.md
examples/providers/: Cargo.toml
examples/rust_copilot_daemon/: Cargo.toml  README.md  docker-compose.yml
examples/rust_copilot_daemon/eval/: query_taxonomy.json  symbol_memory.prev.tsv  symbol_memory.tsv  symbol_snapshot.json
examples/rust_copilot_daemon/eval/fixtures/: rust_copilot_metrics_fixture.expected.json  rust_copilot_metrics_fixture.rust_analyzer_baseline.json
examples/rust_copilot_daemon/eval/goldens/: basic_queries.json  rust_copilot_metrics_fixture.contract.json
examples/rust_copilot_daemon/eval/observed/: rust_copilot_metrics_fixture.sample.json
examples/rust_copilot_daemon/eval/scripts/: collect_rust_analyzer_baseline.py
examples/rust_copilot_daemon/src/: jsonrpc_layer.rs  main.rs  mcp_layer.rs  schema.rs
examples/rust_copilot_daemon/tests/: eval_contract.rs
examples/rust_copilot_metrics_fixture/: Cargo.toml  README.md
examples/rust_copilot_metrics_fixture/crates/fixture_helper/: Cargo.toml
examples/rust_copilot_metrics_fixture/crates/fixture_helper/src/: lib.rs
examples/rust_copilot_metrics_fixture/docs/: how_things_are_counted.md
examples/rust_copilot_metrics_fixture/src/: engine.rs  lib.rs  syntax_playground.rs  types.rs
examples/rust_copilot_metrics_fixture/tests/: smoke.rs
